fixed combat log overflow

--- a/New App/dnd-jrpg/src/App.css
+++ b/New App/dnd-jrpg/src/App.css
@@ -1,8 +1,3 @@
-/* 
-div {
-    border: 1px solid black;
-} */
-
 .battle-field,
 .interface {
     overflow-y: auto;
@@ -23,8 +18,4 @@ div {
 
 .attack-message {
     font-size: 5vh;
-}
-
-.combat-log {
-    overflow: hidden;
 }
